--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pomodoro",
   "version": "0.1.0",
   "scripts": {
-    "build": "bsb -make-world",
+    "build": "bsb -make-world && webpack && cp indexProduction.html bundleOutput/index.html && cp index.css bundleOutput",
     "start": "bsb -make-world -w -ws _ ",
-    "clean": "bsb -clean-world",
+    "clean": "bsb -clean-world && rm -rf bundleOutput",
     "server": "moduleserve ./ --port 8000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "bs-platform": "^9.0.1",
-    "moduleserve": "^0.9.0"
+    "moduleserve": "^0.9.0",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
   }
 }
